# ska-itf-te

./: .gitignore  .gitlab-ci.yml  .gitmodules  .pylintrc  .readthedocs.yaml  .release  CHANGELOG.md  CODEOWNERS  Dockerfile  MAKE_COMMANDS.md  MANIFEST.skao.int  Makefile  README.md  TMC_Monitoring.wj  autorelease.sh  claude.md  dev-values.yaml  diff  manifests.yaml_bu  mypy.ini  patch-pvc.yaml  pyproject.toml  ska-db-oda.yaml  staging-dish-lmc-ska001-values.yaml  steps.sh  sut_config.yaml  test-connections.sh  test_file.txt  values_diff_merge.py
.devcontainer/: Dockerfile  Dockerfile-ci  Dockerfile-devcontainer  devcontainer.json
charts/: Signal_Generator_demo.wj  values-mid-itf.yaml
dashboards/: CSP & CBF basic ONOFF.wj  CSP Capabilities.wj  CSP Commands.wj  CSP MonitorPanel.wj  CSP Subarrays.wj  CSP-Commands-AJ.wj  CSP-MonitorPanel-AJ.wj  CSP_Capabilities.wj  CSP_Commands (1).wj  CSP_Commands.wj  CSP_Commands_AJ.wj  CSP_MonitorPanel_AJ.wj  CSP_Subarrays.wj  Consolidated_Dashboards - Pi0.wj  Consolidated_Dashboards - Pi4.wj  Consolidated_Dashboards - progatt.wj  Consolidated_Dashboards.wj  DISH-LMC  SKA063.wj  DISH-LMC SKA001.wj  DISH-LMC SKA010 VM.wj  DISH-LMC SKA036.wj  DISH-LMC SKA063.wj  DISH-LMC SKA100.wj  Mid CBF Overview.wj  Programmable Attenuator Dashboard.wj  SDP Integration - current.wj  SDP Integration - latest-available.wj  SDP Integration.wj  SKA-DISH-LMC-SKA001.wj  SKA-DISH-LMC-SKA036.wj  SKA001 DISH.LMC.wj  SKA034 DISH-LMC.wj  SKA036 DISH.LMC.wj  SKA077 DISH-LMC.wj  SKA077 DISH.LMC.wj  SKA100 DISH-LMC.wj  (+6 more)
resources/ansible-playbooks/: .ansible-lint  .gitignore  .gitlab-ci.yml  .release  Makefile  README.md  main.yml  pyproject.toml  site.yml
resources/ansible-playbooks/group_vars/: all  all.yml
resources/ansible-playbooks/group_vars/atlas/: atlas.yml
resources/ansible-playbooks/group_vars/cipa/: cipa.yml
resources/ansible-playbooks/group_vars/karoo/: karoo.yml
resources/ansible-playbooks/group_vars/spfrx_configs/: spfrx_configs.yaml
resources/ansible-playbooks/group_vars/spfrx_itf/: spfrx_itf.yml
resources/ansible-playbooks/group_vars/spfrx_mid/: spfrx_mid.yml
resources/ansible-playbooks/group_vars/test/: test.yml
resources/ansible-playbooks/group_vars/wombat/: wombat.yml
resources/ansible-playbooks/images/ansible-test-gaia/: Dockerfile
resources/ansible-playbooks/inventory/: hosts  hosts-template
resources/ansible-playbooks/roles/cluster_dns/tasks/: main.yml
resources/ansible-playbooks/roles/kubectl_setup/tasks/: main.yml
resources/ansible-playbooks/roles/kubectl_setup/templates/: kubeconfig_setup.sh.j2  kubeconfig_setup_admin.sh.j2  kubectl_aliases.sh.j2
resources/ansible-playbooks/roles/local_ssh/tasks/: main.yml
resources/ansible-playbooks/roles/local_ssh/templates/: ssh_config.j2
resources/ansible-playbooks/roles/local_ssh/vars/: main.yml
resources/ansible-playbooks/roles/skysim/defaults/: main.yml
resources/ansible-playbooks/roles/skysim/tasks/: main.yml
resources/ansible-playbooks/roles/spfrx_setup/defaults/: main.yml
resources/ansible-playbooks/roles/spfrx_setup/tasks/: main.yml  network.yml  ntp.yml
resources/ansible-playbooks/roles/spfrx_setup/templates/: 00-eth.network.j2  10-eth.network.j2  ntp.conf.j2
resources/ansible-playbooks/roles/spfrx_setup/vars/: main.yml
resources/ansible-playbooks/roles/ssh/tasks/: main.yml
resources/ansible-playbooks/roles/ssh/templates/: bash_aliases.j2
resources/ansible-playbooks/roles/ssh/vars/: main.yml
resources/ansible-playbooks/roles/ssh_keys/defaults/: main.yml
resources/ansible-playbooks/roles/ssh_keys/tasks/: main.yml  setup_ssh_key.yml  setup_ssh_keys.yml
resources/ansible-playbooks/roles/status/defaults/: main.yml
resources/ansible-playbooks/roles/status/files/: config.yaml  config_blackbox.yaml  config_gatus.yaml  vigil.cfg
resources/ansible-playbooks/roles/status/tasks/: main.yml  run_blackbox.yml  run_gatus.yml  run_vigil.yml
resources/ansible-playbooks/roles/system_setup/defaults/: main.yml
resources/ansible-playbooks/roles/system_setup/tasks/: main.yml
resources/ansible-playbooks/roles/team_setup/tasks/: main.yml
resources/ansible-playbooks/roles/update_spfc/files/: tango_host_conf.ini
resources/ansible-playbooks/roles/update_spfc/tasks/: main.yml
resources/ansible-playbooks/roles/update_spfc/templates/: tango_host.ini.j2  tango_host_conf.ini.j2
resources/ansible-playbooks/roles/update_spfc/vars/: main.yml
resources/ansible-playbooks/roles/update_talon/tasks/: main.yml  network.yml
resources/ansible-playbooks/roles/update_talon/vars/: main.yml
resources/ansible-playbooks/roles/user_config/defaults/: main.yml
resources/ansible-playbooks/roles/user_config/tasks/: main.yml  user_config.yml
resources/ansible-playbooks/roles/user_config/templates/: bash_aliases.j2  kubeconfig_setup.sh.j2  ssh_config.j2  welcome.sh.j2
resources/ansible-playbooks/roles/user_setup/defaults/: main.yml
resources/ansible-playbooks/roles/user_setup/tasks/: create_user.yml  main.yml  remove_user.yml  user_setup.yml
resources/ansible-playbooks/roles/user_setup/vars/: main.yml
resources/ansible-playbooks/roles/var_setup/tasks/: main.yml  user_groups.yml
resources/ansible-playbooks/testing/: Dockerfile copy  build.sh  run.sh  test.sh  vars.sh
resources/ansible-playbooks/testing/docker/gaia/: Dockerfile  add_users.sh
resources/ansible-playbooks/testing/docker/raspberry_pi/: Dockerfile
resources/ansible-playbooks/testing/docker/test/: Dockerfile
tests/: pytest.ini  (+6 more)
(+844 files in other folders)
