[tool.poetry]
name = "ska-mid-itf"
version = "0.1.1"
description = "Integration testing and deployment project for the Mid ITF"
authors = ["ATLAS"]
license = "BSD 3-Clause"
readme = "README.md"
packages = [{ include = "tests/integration" } ]

[[tool.poetry.source]]
name = 'skao'
url = 'https://artefact.skao.int/repository/pypi-internal/simple'

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
ska-mid-itf-engineering-tools = "^0.3.0"
httpx = "^0.26.0"
