[tool.poetry]
name = "ska-mid-itf"
version = "23.3.0"
description = "Integration testing and deployment project for the Mid ITF"
authors = ["ATLAS"]
license = "BSD 3-Clause"
readme = "README.md"
packages = [{ include = "tests/integration" } ]

[[tool.poetry.source]]
name = 'skao'
url = 'https://artefact.skao.int/repository/pypi-internal/simple'

[[tool.poetry.source]]
name = "PyPI-public"
url = 'https://pypi.org/simple'

[tool.poetry.dependencies]
annotated-types = "^0.6.0"
black = "^24.3.0"
GitPython = "^3.1.43"
httpx = "^0.27.0"
h11 = "^0.14.0"
pydantic-core = "^2.18.1"
pytango = "^9.5.1"
pytest-json-report = "^1.5.0"
pytest-repeat = "^0.9.1"
python = ">=3.10,<3.11"
pyyaml = "^6.0.1"
ska-control-model = "^1.0.0"
ska-mid-itf-engineering-tools = "^0.9.2"
ska_ser_logging = "^0.4.1"
ska-ser-skallop = { version = "^2.31.0", extras = ["bit"] }
ska-oso-pdm = "^14.3.0"
ska-oso-scripting = "^8.0.0"
ska-telmodel = "^1.15.1"
ska-tmc-cdm = "^9.2.1"

[tool.poetry.group.docs.dependencies]
markupsafe = "^2.1.0"
recommonmark = "^0.7.1"
Sphinx = "^7.2.6"
sphinx-rtd-theme = "^1.3.0"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
darglint = "^1.8.1"
flake8 = "^7.0.0"
flake8-docstrings = "^1.7.0"
flake8-rst-docstrings = "^0.3.0"
isort = "^5.12.0"
mypy = "^1.8.0"
pylint = "^3.1.0"
pylint-junit = "^0.3.2"
pytest-cov = "^4.0.0"
twine = "^5.0.0"

[tool.poetry.group.ansible.dependencies]
ansible = "^9.3.0"
ansible-lint = { version = "^24.2.0", markers = "platform_system != 'Windows'" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-p no:warnings"
log_cli = "False"
log_cli_level = "INFO"
testpaths = ["tests/integration"]
junit_family = "xunit2"
python_classes = "!Test"
#bdd_features_base_dir = "tests"

[tool.build_sphinx]
all_files = 1
builder = "html"
build-dir = "docs/_build"
source-dir = "docs/src"

[tool.isort]
line_length = 99
multi_line_output = 3
profile = "black"

[tool.flake8]
max-line-length = 99

[tool.black]
line_length = 99
