[tool.poetry]
name = "distribute-ssh-keys"
version = "0.1.0"
description = "Distribution package for Mid ITF"
authors = ["Adriaan de Beer <adebeer42@gmail.com>"]
license = "BSD"
readme = "README.md"
packages = [{include = "distribute_ssh_keys"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
ansible = "^7.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
