[tool.poetry]
name = "ansible-playbooks"
version = "0.1.0"
description = "Ansible playbooks for Mid ITF"
authors = ["Adriaan de Beer <adebeer42@gmail.com>"]
license = "BSD"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
ansible = "^7.5.0"
ansible-lint = {version = "^6.18.0", markers = "platform_system != 'Windows'"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
